// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - Living Edge Lab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";

package steeleagle.api;
import "steeleagle/shared/common.proto";

// Request/Response for getters
message Dataplane {
  oneof method {
    Compute getCompute = 1;
    Drone getDrone = 2;
  }
  ResponseStatus resp = 3;
  int64 seqNum = 4;
}

message Drone{
  oneof method {
    Location Home = 1;
    Camera Cameras = 2;
    Telemetry Telemetry= 3;
  }
}

message Compute{
  repeated ComputeResult result = 1;
  string compute_type = 2;
}


